[tool.poetry]
name = "metricsdao-workshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "metricsdao_workshop"}]

[tool.poetry.dependencies]
python = "^3.10"
subgrounds = {extras = ["plotly"], version = "^1.5.0"}
nbformat = "^5.8.0"
ipykernel = "^6.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
